...

                    <TextView
                        android:id="@+id/jobDetailsTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                    <ImageView
                        android:id="@+id/backarrowAddJob"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
...

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/titleFromInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/companyFromInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/locationFromIInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/salaryFromInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/bonusFromInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/leaveTimeFromInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/stockSharesFromInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/homeFundFromInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/wellnessFundFromInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                    <Button
                        android:id="@+id/saveJobBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...
