<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d3d3d3"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardOffers"
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:layout_margin="10dp"
            android:layout_weight="1.8"
            android:alwaysDrawnWithCache="false"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cardOfferTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="15dp"
                    android:layout_marginBottom="20dp"
                    android:background="@color/design_default_color_primary">

                    <TextView
                        android:id="@+id/jobOfferTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="24dp"
                        android:text="Job Offers (42)"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="46dp">

                    <TextView
                        android:id="@+id/topFiveText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="13dp"
                        android:text="Top 5 Ranked:"
                        android:textColor="@color/black"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/addJobMain"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:layout_gravity="right"
                        app:layout_constraintBottom_toBottomOf="@+id/topFiveText"
                        app:layout_constraintEnd_toStartOf="@id/settingsMain"
                        app:srcCompat="@drawable/add_icon" />

                    <ImageView
                        android:id="@+id/settingsMain"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        app:layout_constraintBottom_toBottomOf="@id/topFiveText"
                        app:layout_constraintEnd_toStartOf="@id/compareMain"
                        app:srcCompat="@drawable/settings_icon" />

                    <ImageView
                        android:id="@+id/compareMain"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:layout_marginEnd="15dp"
                        app:layout_constraintBottom_toBottomOf="@+id/topFiveText"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:srcCompat="@drawable/compare_icon" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/topOffersRecicler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="15dp"
                    android:paddingBottom="15dp"
                    tools:itemCount="5"
                    tools:listitem="@layout/recycler_view_item">

                </androidx.recyclerview.widget.RecyclerView>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/viewAllJobsBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:gravity="center_horizontal"
                        android:text="View All Jobs"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardCurrentJob"
            android:layout_width="match_parent"
            android:layout_height="134dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:layout_width="389dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cardCurrentView"
                    android:layout_width="match_parent"
                    android:layout_height="75dp"
                    android:background="#008000">

                    <TextView
                        android:id="@+id/CurrentJobTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="24dp"
                        android:text="Current Job"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/editCurrentJobMain"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:layout_marginRight="10dp"
                        app:layout_constraintBottom_toBottomOf="@id/CurrentJobTitle"
                        app:layout_constraintRight_toRightOf="parent"
                        app:srcCompat="@drawable/edit_icon"
                        app:tint="@color/white" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/currentJobRecycler"
                    android:layout_width="match_parent"
                    android:layout_height="101dp"
                    android:layout_marginHorizontal="15dp"
                    android:paddingTop="15dp"
                    tools:itemCount="1"
                    tools:listitem="@layout/current_job_recycler_view" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>